# ComfyUI-CoreMLSuite

./: .gitignore  README.md  __init__.py  loaders.py  logger.py  model.py  pyproject.toml  requirements.txt  utils.py
.github/workflows/: publish.yml
coreml_suite/: __init__.py  clip.py  config.py  controlnet.py  converter.py  latents.py  loaders.py  lora.py  model.py  models.py  nodes.py  samplers.py  utils.py
coreml_suite/lcm/: __init__.py  converter.py  lcm_converter.py  lcm_pipeline.py  lcm_sampler.py  lcm_scheduler.py  nodes.py  sampler.py  scheduler_config.json  unet.py  utils.py
tests/: test_chunks.py  test_controlnet.py  test_latents.py
tests/integration/: test_basic_conversion_1_5.py
tests/integration/workflows/: e2e-1.5-basic-conversion.json
tests/unit/: test_controlnet.py
